# airport_db_rest_api

./: .env  Cargo.toml
docs/: DB_AirPortv0.1.docx  DB_AirPortv0.2.docx  cmd.txt
migrations/2024-03-17-130443_create_airport/: down.sql  up.sql
src/: AirPort_BackUp.sql  db.rs  error_handler.rs  main.rs  schema.rs
src/airplane_seat_types/: airplane_seat_type_model.rs  airplane_seat_type_routes.rs  mod.rs
src/airplanes/: airplane_model.rs  airplane_routes.rs  mod.rs
src/airports/: airport_model.rs  airport_routes.rs  mod.rs
src/clients/: client_model.rs  client_routes.rs  mod.rs
src/flights_schedule/: flight_schedule_model.rs  flight_schedule_routes.rs  mod.rs
src/plane_seat_connections/: mod.rs  plane_seat_connection_model.rs  plane_seat_connection_routes.rs
src/tickets/: mod.rs  ticket_model.rs  ticket_routes.rs
src/users/: mod.rs  user_model.rs  user_routes.rs
