[package]
name = "air_port_dbapi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.7.0"
actix-rt = "2.9.0"
actix-web = "4.5.1"
chrono = {version = "0.4.35", features = ["serde"] }
diesel = {version = "2.1.5", features = ["postgres", "r2d2", "uuid", "chrono"]}
diesel_migrations = "2.1.0"
dotenv = "0.15.0"
env_logger = "0.11.3"
lazy_static = "1.4.0"
listenfd = "1.0.1"
r2d2 = "0.8.10"
serde = {version = "1.0.197", features = ["derive"]}
serde_json = "1.0.114"
uuid = { version = "1.7.0", features = ["serde", "v4"] }
